changes in nativeboinc (fix some problems, adds icons, etc).

--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -69,3 +69,6 @@ Tablety:
 
 następne wersje:
 * dodać obsługę screensavera.
+
+client: bugs
+* usuń problem z pierwszymi WU po instalacji projektu. (text busy).
