--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,50 +1,37 @@
-Version 0.2.5.1 (alpha) (2011-09-29)
-- fixed shutting down
-- improved widget design
-- improved error handling
-
-Version 0.2.5 (alpha) (2011-09-15)
-- fix bugs on startup/shutdown client
-
-Version 0.2.4 (alpha) (2011-09-14)
-- fixed message parsing (Boinc.Lite)
-- some improvements
-
-Version 0.2.3 (alpha) (2011-09-04)
-- remove /system/bin/chmod dependency on installation
-
-Version 0.2.2 (alpha) (2011-09-02)
-- add power saving option
-- add new preferences options
-- fix some bugs
-
-Version 0.2.1 (alpha) (2011-08-31)
-- small fixes
-- crash fixes on startup
-
-Version 0.2 (alpha) (2011-08-24)
-- installation improvements
-- adds Local preferences activity (to configure client)
-
-Version 0.1.3.2 (alpha) (2011-08-16)
-- fixed client shutdown
-- installation improvements
-
-Version 0.1.3.1 (alpha) (2011-08-15)
-- try to downloads pgp keys from two servers
-- improvements
-
-Version 0.1.3 (alpha) (2011-08-13)
-- Add update option
-- fix some bugs
-
-Version 0.1.2 (alpha) (2011-08-10)
-- Fix installation problems (bad name of installation files)
-- improve task info dialog and task view
-
-Version 0.1.1 (alpha) (2011-08-09)
-- Fix screen lock progress
-- Small fixes
-
-Version 0.1 (alpha) (2011-08-09)
-- Initial release
+Version 0.3.5 (alpha) (2012-03-24)
+- introduce better orientation changes handling 
+- introduced new installer
+  - multithreaded installation even during working client
+  - synchronization via BAM during installation
+  - notifications during installation
+  - update_apps mechanism support
+  - autoinstallation after BAM synchronizing
+  - progress screen (with cancel option)
+- improved runner
+  - added notifications (when event has been arrived)
+  - add notifications about reason of stopping
+  - client monitor support
+- improved connection manager
+- NativeClient menu option
+  - improved binaries updater
+  - hostname change option
+  - access host list
+  - reinstallation client option
+  - boinc logs viewer
+  - dumping of boinc installation in sdcard
+- improved host list screen (added multiselection)
+- better error handling
+- better service lifecycle managing
+- new larger desktop widget
+- improved main screen
+  - multiselection on tab items
+  - new tab 'Notices'
+  - added filter in Message tab
+  - extended info dialogs
+  - refreshing tab after clicking on tab
+- new local preferences screen
+  - replace single view by tabs
+  - added new option for power management
+- improved screen locker
+- fixed small bugs
+- fit UI for tablets (Android 3.0+)
