--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,4 +1,8 @@
 Version 0.3.5 (alpha) (2012-03-24)
+- fixed tablet widget
+- fixed NPE exception on Notices tab
+
+Version 0.3.5 (alpha) (2012-03-24)
 - introduce better orientation changes handling 
 - introduced new installer
   - multithreaded installation even during working client
