--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,10 @@
+Version 0.3.6.3 (alpha) (2012-03-31)
+- fixed some NullPointerExceptions
+- fixed problems with client monitor handling (after shutting down eating CPU power)
+
+Version 0.3.6.2 (alpha) (2012-03-30)
+- fixed problems with Local preferences
+
 Version 0.3.6.1 (alpha) (2012-03-29)
 - add task info after clicking on task (large widget).  
 - different styles for standalone dialogs (for <3.0 and >3.0)
